--- a/task_backend/package.json
+++ b/task_backend/package.json
@@ -9,6 +9,7 @@
   "author": "Chandan Kumar",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
